# DE

./: .gitignore  README.md  generate_events.py  new_events.py  pyproject.toml  requirements.txt  schema.sql  seed.sql
bank-etl/: docker-compose.yml
bank-etl/airflow/: Dockerfile  requirements.txt
bank-etl/airflow/dags/: bank_etl.py
bank-etl/dbt/: .user.yml  dbt_project.yml  profiles.yml
bank-etl/dbt/models/: sources.yml
bank-etl/dbt/models/ods/: dim_account.sql  dim_card.sql  dim_customer_scd2.sql  dim_terminal.sql  fct_transactions.sql
bank-etl/dbt/models/raw/: raw_account.sql  raw_card.sql  raw_customer.sql  raw_terminal.sql  raw_transaction.sql
bank-etl/sql/dwh/: 01_init.sql
bank-etl/sql/src/: 01_init.sql
lakehouse-lab/data-gen/: publish_events.py
lakehouse-lab/docker/: compose-paimon.yml
lakehouse-lab/sql/paimon/: 05_check_ods_transactions_count.sql  06_check_dm_daily_revenue_preview.sql
simple-etl/: docker-compose.yml
simple-etl/airflow/: Dockerfile
simple-etl/airflow/dags/: cdc_monitoring.py  cdc_to_dwh.py  dbt_incremental_dag.py  hw2_fraud_dbt_dag.py  pg_to_ch_dag.py
simple-etl/cdc/: cdc_consumer_multi.py
simple-etl/clickhouse_init/: 01_schema_dwh.sql
simple-etl/dbt/: .user.yml  dbt_project.yml  profiles.yml
simple-etl/dbt/models/: sources.yml
simple-etl/dbt/models/cdm/: cdm_fraud_cases.sql
simple-etl/dbt/models/dm/: dm_fraud_daily.sql
simple-etl/dbt/models/ods/: ods_dim_account.sql  ods_dim_card.sql  ods_dim_card_scd2.sql  ods_dim_customer.sql  ods_dim_terminal.sql  ods_fact_atm_transaction.sql
simple-etl/dbt/models/raw/: raw_account.sql  raw_card.sql  raw_customer.sql  raw_terminal.sql  raw_transaction.sql  raw_transaction_cdc.sql
simple-etl/dbt/models/stg/: stg_account.sql  stg_card.sql  stg_customer.sql  stg_terminal.sql  stg_transaction.sql
simple-etl/debezium/: postgres-card.json  postgres-transaction.json
